--- a/google.html
+++ b/google.html
@@ -6,31 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google! </title>
-    <style>
-        .logo {
-            text-align: center;
-        }
-
-        .arama {
-            text-align: center;
-            background-color: #EEEEEE;
-            width: 90%;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .footer {
-            margin-left: auto;
-            margin-right: auto;
-        }
-    </style>
+<link rel="stylesheet" href="/src/main.css">
 </head>
 
 <body>
     <!-- Navbar Start !-->
     <header class="logo">
         <!-- Logo Start -->
-        <img src="https://web.archive.org/web/19990504112211im_/http://www.google.com/google.jpg" alt="Google">
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
         <!-- Logo End -->
     </header>
     <!-- Navbar End -->
@@ -38,11 +21,11 @@
     <!-- Content Start -->
     <div>
         <section class="arama">
-            <div>Search the web using Google!</div>
-            <input type="text" id="Search" name="arama" size="40"><br>
+            
+            <input type="text" id="Search" name="arama" size="40">
             <div>
-                <button>Google Search</button>
-                <button>I'm felling lucky</button>
+                <button class="searchh">Google Search</button>
+                <button class="luckyy">I'm felling lucky</button>
             </div>
         </section>
     </div>
@@ -50,27 +33,7 @@
 
 
     <!-- Footer Start -->
-    <table class="footer" style="width: 90%;">
-        <tr>
-            <td width="37%" style="background-color: #7EE5DA; text-align: center;">
-                Special Searches <br>
-                <a href="#">Stanford Search</a><br>
-                <a href="#">Linux Search</a>
-            </td>
-            <td style="background-color: #70CCC2; text-align: center;">
-                <a href="#">Help!</a> <br>
-                <a href="#">About Google!</a> <br>
-                <a href="#">Company Info</a> <br>
-                <a href="#">Google! Logos</a> <br>
-            </td>
-            <td style="background-color: #62B3AA; text-align: center;">
-                Get Google! <br>
-                updates monthly: <br>
-                <input type="email" placeholder="your e-mail"> <br>
-                <button>Subscribe</button> <a href="#">Archive</a>
-            </td>
-        </tr>
-    </table>
+    
 
     <p style="text-align: center; font-size: 12px;"> Copyright ©1998 Google Inc.</p>
 
